syntax = "proto3";
package event_store;

option go_package = "proto/event_store";

service EventStore {
	rpc Publish(Event) returns (EventResponse);
}

message Event {
	string name = 1;
	string aggregate_id = 2;
	string aggregate_type = 3;
	string data = 4;
}

message EventResponse {
	string event_id = 1;
	string error = 2;
}
